import org.jetbrains.kotlin.gradle.tasks.KotlinCompile

plugins {
    id 'fabric-loom' version "${loom_version}"
    id 'maven-publish'
    id "org.jetbrains.kotlin.jvm" version "2.3.21"
}

version = mod_version
group = maven_group

base {
    archivesName = archives_base_name
}

repositories {
    maven {
        name = "GitHubPackages"
        url = uri("https://maven.pkg.github.com/maucon/maucon-framework")
        credentials {
            username = System.getenv("GITHUB_PACKAGES_NAME")
            password = System.getenv("GITHUB_PACKAGES_TOKEN")
        }
    }
    maven { url = 'https://maven.nucleoid.xyz/' }
    exclusiveContent {
        forRepository {
            maven {
                name = 'GeckoLib'
                url = 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
            }
        }
        filter {
            includeGroup('software.bernie.geckolib')
        }
    }
}

loom {
    log4jConfigs.from(file("src/main/resources/log4j.xml"))

    accessWidenerPath = file("src/main/resources/mcendgame.accesswidener")

    splitEnvironmentSourceSets()

    mods {
        "mcendgame" {
            sourceSet sourceSets.main
            sourceSet sourceSets.client
        }
    }
}

fabricApi {
    configureDataGeneration {
        client = true
    }
}

dependencies {
    minecraft "com.mojang:minecraft:${minecraft_version}"
    mappings loom.officialMojangMappings()
    modImplementation "net.fabricmc:fabric-loader:${loader_version}"

    modImplementation "net.fabricmc.fabric-api:fabric-api:${fabric_version}"
    modImplementation "net.fabricmc:fabric-language-kotlin:${fabric_kotlin_version}"

    modImplementation "xyz.nucleoid:fantasy:0.7.0+1.21.11"
    modImplementation "software.bernie.geckolib:geckolib-fabric-${minecraft_version}:5.4.4"
    implementation "de.maucon:maucon-framework:2.0.1"

    include "de.maucon:maucon-framework:2.0.1"
    include "org.jetbrains.kotlin:kotlin-reflect"
    include "org.reflections:reflections:0.10.2"
    include "org.slf4j:slf4j-api:2.0.17"
    include "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.1"
    include "org.javassist:javassist:3.30.2-GA"
}

processResources {
    inputs.property "version", version

    filesMatching("fabric.mod.json") {
        expand "version": version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 21
}

tasks.withType(KotlinCompile).configureEach {
    kotlinOptions {
        jvmTarget = 21
    }
}

java {
    withSourcesJar()

    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

jar {
    from("LICENSE") {
        rename { "${it}_${base.archivesName.get()}" }
    }
}